--- a/app/src/main/res/drawable/linear.xml
+++ b/app/src/main/res/drawable/linear.xml
@@ -1,46 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@android:id/background">
+<layer-list
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <item
+        android:id="@android:id/background">
         <shape>
-            <corners android:radius="5dip" />
-            <gradient
-                android:startColor="#ff9d9e9d"
-                android:centerColor="#ff5a5d5a"
-                android:centerY="0.75"
-                android:endColor="#ff747674"
-                android:angle="270"
+            <padding
+                android:bottom="3dip"
+                android:top="3dip"
+                android:left="3dip"
+                android:right="3dip"
                 />
+            <corners
+                android:radius="5dip" />
+            <gradient
+                android:startColor="#ff1997e1"
+                android:centerColor="#ff1997e1"
+                android:centerY="0.50"
+                android:endColor="#ff1997e1"
+                android:angle="270" />
         </shape>
     </item>
-
-    <item android:id="@android:id/secondaryProgress">
-        <clip>
-            <shape>
-                <corners android:radius="5dip" />
-                <gradient
-                    android:startColor="#80ffd300"
-                    android:centerColor="#80ffb600"
-                    android:centerY="0.75"
-                    android:endColor="#a0ffcb00"
-                    android:angle="270"
-                    />
-            </shape>
-        </clip>
-    </item>
     <item
-        android:id="@android:id/progress"
-        >
+        android:id="@android:id/progress">
         <clip>
             <shape>
                 <corners
                     android:radius="5dip" />
                 <gradient
-                    android:startColor="#33FF33"
-                    android:endColor="#008000"
-                    android:angle="270" />
+                    android:startColor="#00ff00"
+                    android:endColor="#00ff00"
+                    android:angle="90" />
             </shape>
         </clip>
     </item>
-
 </layer-list>
