--- a/app/src/main/res/layout/activity_fetch_call_type.xml
+++ b/app/src/main/res/layout/activity_fetch_call_type.xml
@@ -19,6 +19,22 @@
         android:layout_height="200dp"
         custom:arc_progress="55"
         custom:arc_bottom_text="STD"/>
+    <ProgressBar xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/linearProgressBar1"
+        style="@style/CustomProgressBar"
+        android:layout_width="200dp"
+        android:layout_height="5dp"
+        android:layout_marginTop="260dp"
+        android:layout_marginLeft="150dp"
+        >
+    </ProgressBar>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Same Operator"
+        android:layout_marginTop="270dp"
+        android:layout_marginLeft="200dp"
+        />
     <com.github.lzyzsd.circleprogress.ArcProgress
         android:id="@+id/arc_progress2"
         android:layout_marginTop="10dp"
@@ -27,5 +43,91 @@
         android:layout_height="130dp"
         custom:arc_progress="55"
         custom:arc_bottom_text="LOCAL"/>
+    <ProgressBar xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/linearProgressBar2"
+
+        style="@style/CustomProgressBar"
+        android:layout_width="130dp"
+        android:layout_height="5dp"
+        android:layout_marginTop="150dp">
+    </ProgressBar>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Same Operator"
+        android:layout_marginTop="160dp"
+        android:layout_marginLeft="20dp"
+        />
+    <ProgressBar xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/lp"
+        style="@android:style/Widget.Holo.ProgressBar.Horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="invisible"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="100dp"
+        android:progressDrawable="@drawable/linear">
+    </ProgressBar>
+
+    <Button
+        android:id="@+id/nonpressed_btn"
+
+        android:text="Analyze"
+        android:textColor="#FFFFFF"
+        android:textSize="30sp"
+
+        android:layout_width="270dp"
+        android:layout_height="60dp"
+        android:background="@drawable/button_shape"
+        android:shadowColor="#423EA8"
+        android:shadowDx="0"
+        android:shadowDy="0"
+        android:shadowRadius="5"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="30dp"
+        />
+    <Button
+        android:id="@+id/fetch_plan"
+
+        android:text="Fetch Plans"
+        android:textColor="#FFFFFF"
+        android:textSize="30sp"
+
+        android:layout_width="270dp"
+        android:layout_height="60dp"
+        android:background="@drawable/button_shape"
+        android:shadowColor="#423EA8"
+        android:shadowDx="0"
+        android:shadowDy="0"
+        android:shadowRadius="5"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+
+        android:visibility="invisible"
+        android:enabled="false"
+
+        android:layout_marginBottom="30dp"
+        />
+
+    <Button
+        android:id="@+id/pressed_btn"
+
+        android:text="Analyzing..."
+        android:textColor="#FFFFFF"
+        android:textSize="30sp"
+        android:visibility="invisible"
+        android:layout_width="270dp"
+        android:layout_height="60dp"
+        android:background="@drawable/button_shapepressed"
+        android:shadowColor="#423EA8"
+        android:shadowDx="0"
+        android:shadowDy="0"
+        android:shadowRadius="5"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="30dp"
+        />
 
 </RelativeLayout>
