--- a/app/src/main/res/layout/activity_screen_slide.xml
+++ b/app/src/main/res/layout/activity_screen_slide.xml
@@ -13,19 +13,38 @@
   See the License for the specific language governing permissions and
   limitations under the License.
   -->
+
+
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
 <LinearLayout
     android:layout_width="fill_parent" android:layout_height="fill_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+
     android:orientation="vertical">
 <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/pager"
     android:layout_width="match_parent"
     android:layout_height="0dip"
-    android:layout_weight="50"/>
+    android:layout_weight="50"
+    />
 
  <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/pager2"
         android:layout_width="match_parent"
         android:layout_height="0dip"
         android:layout_weight="50" />
+
 </LinearLayout>
+<ImageView
+    android:id="@+id/img"
+android:layout_height="30dp"
+android:layout_width="30dp"
+android:layout_marginLeft="300dp"
+android:adjustViewBounds="true"
+android:contentDescription="Slide for next"
+android:src="@drawable/slide"
+    />
+
+</RelativeLayout>
