--- a/app/src/main/res/layout/activity_phone_number.xml
+++ b/app/src/main/res/layout/activity_phone_number.xml
@@ -22,7 +22,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:hint="Phone Number"
+    android:hint="10 digit phone number"
     android:inputType="number" />
 
     <Button android:id="@+id/submit"
