--- a/app/src/main/res/layout/activity_screen_slide.xml
+++ b/app/src/main/res/layout/activity_screen_slide.xml
@@ -20,6 +20,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
 <LinearLayout
+    android:id="@+id/layout"
     android:layout_width="fill_parent" android:layout_height="fill_parent"
 
     android:orientation="vertical">
@@ -37,14 +38,6 @@
         android:layout_weight="50" />
 
 </LinearLayout>
-<ImageView
-    android:id="@+id/img"
-android:layout_height="30dp"
-android:layout_width="30dp"
-android:layout_marginLeft="300dp"
-android:adjustViewBounds="true"
-android:contentDescription="Slide for next"
-android:src="@drawable/slide"
-    />
+
 
 </RelativeLayout>
