--- a/app/src/main/res/layout/fragment_screen_slide_page.xml
+++ b/app/src/main/res/layout/fragment_screen_slide_page.xml
@@ -38,6 +38,24 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
+        <ImageView
+            android:id="@+id/img"
+            android:layout_height="30dp"
+            android:layout_width="30dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="300dp"
+            android:adjustViewBounds="true"
+            android:src="@drawable/slide"
+            />
+
+        <TextView
+            android:layout_height="30dp"
+            android:layout_width="40dp"
+            android:textColor="@color/abc_primary_text_material_dark"
+            android:layout_marginLeft="290dp"
+            android:text="Slide"/>
+
+
     </LinearLayout>
 
 </ScrollView>
