--- a/app/src/main/res/menu/menu_screen_slide.xml
+++ b/app/src/main/res/menu/menu_screen_slide.xml
@@ -4,4 +4,6 @@
     tools:context="com.example.shiwangi.dataplan.ScreenSlideActivity">
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
         android:orderInCategory="100" app:showAsAction="never" />
+    <item android:id="@+id/change_number" android:title="Change Number"
+        android:orderInCategory="100" app:showAsAction="never" />
 </menu>
