--- a/app/src/main/res/layout/activity_fetch_call_type.xml
+++ b/app/src/main/res/layout/activity_fetch_call_type.xml
@@ -36,6 +36,7 @@
         android:layout_marginLeft="200dp"
         />
     <TextView
+        android:id="@+id/fromDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Your calls since 27th Februrary,2015"
